--- a/app/src/main/res/layout/movie_cast_list_item_view.xml
+++ b/app/src/main/res/layout/movie_cast_list_item_view.xml
@@ -1,40 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/movieCastIV"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:id="@+id/movieCastImage"
-        android:layout_marginBottom="10dp"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp" />
 
     <TextView
+        android:id="@+id/nameTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/movieCastImage"
+        android:layout_centerInParent="true"
         android:layout_marginLeft="5dp"
-        android:layout_centerInParent="true"
-        android:textColor="@android:color/black"
-        android:id="@+id/movieCastName" />
+        android:layout_toRightOf="@id/movieCastIV"
+        android:textColor="@android:color/black" />
 
     <TextView
+        android:id="@+id/castCharacterTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/moviCastCharacter"
-        android:textStyle="italic"
-        android:layout_marginLeft="25dp"
         android:layout_centerInParent="true"
-        android:layout_toRightOf="@+id/movieCastName"/>
+        android:layout_marginLeft="25dp"
+        android:layout_toRightOf="@+id/nameTV"
+        android:textStyle="italic" />
 
     <View
+        android:id="@+id/dividerV"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:id="@+id/movieCastDivider"
-        android:background="#31C7C7CC"
-        android:layout_below="@id/movieCastImage">
-    </View>
+        android:layout_below="@id/movieCastIV"
+        android:background="#31C7C7CC" />
 </RelativeLayout>
 
