--- a/app/src/main/res/layout/horizontal_cardview_movies.xml
+++ b/app/src/main/res/layout/horizontal_cardview_movies.xml
@@ -1,57 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cardView"
+    android:id="@+id/rootCV"
     android:layout_width="140dp"
     android:layout_height="300dp"
-    android:layout_marginLeft="5dp"
     android:layout_marginStart="5dp"
-    app:cardPreventCornerOverlap="false"
+    android:layout_marginLeft="5dp"
     android:elevation="2dp"
-    app:cardUseCompatPadding="true"
-    app:cardCornerRadius="0dp">
+    app:cardCornerRadius="0dp"
+    app:cardPreventCornerOverlap="false"
+    app:cardUseCompatPadding="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/thumbnailImageView"
+            android:id="@+id/thumbnailIV"
             android:layout_width="match_parent"
             android:layout_height="196dp"
-            android:transitionName="posterImageTransition"
-            android:scaleType="fitXY" />
+            android:scaleType="fitXY"
+            android:transitionName="posterImageTransition" />
 
         <TextView
-            android:id="@+id/nameTextView"
+            android:id="@+id/nameTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="left"
+            android:layout_below="@+id/thumbnailIV"
             android:layout_marginTop="5dp"
-            android:textSize="15dp"
+            android:gravity="left"
             android:paddingLeft="5dp"
-            android:layout_below="@+id/thumbnailImageView"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/black"
+            android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/releaseDateTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/releaseDateTextView"
+            android:layout_below="@id/nameTV"
             android:paddingLeft="5dp"
-            android:layout_below="@id/nameTextView"
-            android:textSize="12dp"/>
+            android:textSize="12sp" />
 
         <TextView
+            android:id="@+id/ratingTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/ratingTextView"
-            android:paddingLeft="4dp"
             android:layout_alignParentBottom="true"
-            android:textColor="@android:color/black"
             android:layout_marginBottom="5dp"
-            android:textSize="14dp"
+            android:drawableRight="@drawable/ic_star"
             android:drawablePadding="3dp"
-            android:drawableRight="@drawable/ic_star"/>
+            android:paddingLeft="4dp"
+            android:textColor="@android:color/black"
+            android:textSize="14sp" />
 
 
     </RelativeLayout>
