--- a/app/src/main/res/layout/review_list_item_view.xml
+++ b/app/src/main/res/layout/review_list_item_view.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/reviewCardView"
+    android:id="@+id/reviewCV"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
     android:layout_marginTop="16dp"
+    android:layout_marginRight="16dp"
     android:elevation="2dp"
     app:cardCornerRadius="0dp"
     app:cardPreventCornerOverlap="false"
@@ -18,66 +18,66 @@
 
 
         <TextView
+            android:id="@+id/reviewHeadingTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp" 
             android:layout_marginStart="80dp"
-            android:textStyle="bold"
-            android:textSize="18dp"
-            android:textColor="@android:color/black"
             android:layout_marginLeft="80dp"
-            android:id="@+id/reviewHeading"/>
+            android:layout_marginTop="16dp"
+            android:textColor="@android:color/black"
+            android:textSize="18dp"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/circleTV"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:textColor="@android:color/black"
-            android:layout_marginTop="16dp"
-            android:gravity="center"
-            android:textSize="20dp"
             android:layout_marginLeft="16dp"
-            android:textAllCaps="true"
+            android:layout_marginTop="16dp"
             android:background="@drawable/circle_text_view"
-            android:id="@+id/circleTextView"/>
-        
+            android:gravity="center"
+            android:textAllCaps="true"
+            android:textColor="@android:color/black"
+            android:textSize="20dp" />
+
         <TextView
+            android:id="@+id/reviewSubheadingTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/reviewHeading"
-            android:layout_alignStart="@+id/reviewHeading"
-            android:id="@+id/reviewSubheading"/>
+            android:layout_below="@+id/reviewHeadingTV"
+            android:layout_alignStart="@+id/reviewHeadingTV" />
 
         <TextView
             android:id="@+id/reviewsTextView"
-            android:layout_below="@+id/reviewSubheading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
+            android:layout_below="@+id/reviewSubheadingTV"
             android:layout_alignParentStart="true"
             android:layout_marginStart="16dp"
-            android:textSize="14dp"
-            android:lineSpacingExtra="2.5dp"
             android:layout_marginTop="13dp"
+            android:layout_marginEnd="10dp"
             android:ellipsize="end"
+            android:lineSpacingExtra="2.5dp"
             android:maxLines="9"
-            android:minLines="1" />
+            android:minLines="1"
+            android:textSize="14dp" />
 
         <TextView
+            android:id="@+id/readMoreTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/readtheRestTextView"
-            android:clickable="true"
-            android:layout_marginEnd="10dp"
+            android:layout_below="@id/reviewsTextView"
+            android:layout_centerHorizontal="true"
             android:layout_marginStart="16dp"
             android:layout_marginTop="2.5dp"
-            android:visibility="invisible"
+            android:layout_marginEnd="10dp"
             android:layout_marginBottom="16dp"
+            android:clickable="true"
             android:padding="6dp"
-            android:layout_below="@id/reviewsTextView"
-            android:textColor="@android:color/black"
-            android:layout_centerHorizontal="true"
             android:textAllCaps="true"
-            android:textSize="14dp"/>
+            android:textColor="@android:color/black"
+            android:textSize="14dp"
+            android:visibility="invisible" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
 
