--- a/app/src/main/res/layout/tvshow_cast_list_item_view.xml
+++ b/app/src/main/res/layout/tvshow_cast_list_item_view.xml
@@ -5,35 +5,35 @@
     android:orientation="horizontal">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/tvshowCastImage"
+        android:id="@+id/castIV"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:layout_marginBottom="10dp"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp" />
 
     <TextView
-        android:id="@+id/tvshowCastName"
+        android:id="@+id/castNameTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_marginStart="5dp"
-        android:layout_toEndOf="@id/tvshowCastImage"
+        android:layout_toEndOf="@id/castIV"
         android:textColor="@android:color/black" />
 
     <TextView
-        android:id="@+id/tvshowCastCharacter"
+        android:id="@+id/castCharacterTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_marginStart="25dp"
-        android:layout_toRightOf="@+id/tvshowCastName"
+        android:layout_toRightOf="@+id/castNameTV"
         android:textStyle="italic" />
 
     <View
-        android:id="@+id/tvshowCastDivider"
+        android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@id/movieCastImage"
-        android:background="#31C7C7CC"/>
+        android:layout_below="@id/castIV"
+        android:background="#31C7C7CC" />
 </RelativeLayout>
