ui change + code refactoring + dp to sp

--- a/app/src/main/res/layout/fragment_cast_tvshow.xml
+++ b/app/src/main/res/layout/fragment_cast_tvshow.xml
@@ -19,6 +19,6 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:textSize="19dp"
+        android:textSize="19sp"
         android:visibility="invisible" />
 </RelativeLayout>
