--- a/app/src/main/res/layout/acitivity_main_second_tvshows.xml
+++ b/app/src/main/res/layout/acitivity_main_second_tvshows.xml
@@ -12,7 +12,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="5dp"
         android:textColor="@android:color/black"
-        android:textSize="19dp" />
+        android:textSize="19sp" />
 
     <TextView
         android:layout_width="wrap_content"
