--- a/app/src/main/res/layout/fragment_info_movie.xml
+++ b/app/src/main/res/layout/fragment_info_movie.xml
@@ -16,7 +16,7 @@
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:text="About the Film"
             android:textColor="@android:color/black"
-            android:textSize="16dp" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/aboutFilmTextView"
@@ -37,7 +37,7 @@
             android:layout_marginTop="15dp"
             android:text="Released:"
             android:textColor="@android:color/black"
-            android:textSize="16dp" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/releasedTextView"
@@ -56,7 +56,7 @@
             android:layout_marginTop="10dp"
             android:text="Budget:"
             android:textColor="@android:color/black"
-            android:textSize="16dp" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/budgetTextView"
@@ -75,7 +75,7 @@
             android:layout_marginTop="10dp"
             android:text="Revenue:"
             android:textColor="@android:color/black"
-            android:textSize="16dp" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/revenueTextView"
@@ -94,7 +94,7 @@
             android:layout_marginTop="20dp"
             android:text="Trailors"
             android:textColor="@android:color/black"
-            android:textSize="16dp" />
+            android:textSize="16sp" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/trailorsRecyclerView"
@@ -121,7 +121,7 @@
             android:layout_marginTop="20dp"
             android:text="Similar Movies"
             android:textColor="@android:color/black"
-            android:textSize="16dp" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/seeAllTextViewMovieInfoFragment"
@@ -132,7 +132,7 @@
             android:layout_marginEnd="16dp"
             android:clickable="true"
             android:padding="7dp"
-            android:text="See all >" />
+            android:text="See all" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/similarMoviesRecyclerView"
