--- a/app/src/main/res/layout/horizontal_cardview_movies.xml
+++ b/app/src/main/res/layout/horizontal_cardview_movies.xml
@@ -4,10 +4,8 @@
     android:id="@+id/rootCV"
     android:layout_width="140dp"
     android:layout_height="300dp"
-    android:layout_marginStart="5dp"
-    android:layout_marginLeft="5dp"
     android:elevation="2dp"
-    app:cardCornerRadius="0dp"
+    app:cardCornerRadius="2dp"
     app:cardPreventCornerOverlap="false"
     app:cardUseCompatPadding="true">
 
@@ -29,16 +27,18 @@
             android:layout_below="@+id/thumbnailIV"
             android:layout_marginTop="5dp"
             android:gravity="left"
-            android:paddingLeft="5dp"
-            android:textColor="@android:color/black"
-            android:textSize="15sp" />
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:textColor="@android:color/black"/>
 
         <TextView
             android:id="@+id/releaseDateTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/nameTV"
-            android:paddingLeft="5dp"
+            android:layout_marginLeft="4dp"
             android:textSize="12sp" />
 
         <TextView
@@ -51,7 +51,7 @@
             android:drawablePadding="3dp"
             android:paddingLeft="4dp"
             android:textColor="@android:color/black"
-            android:textSize="14sp" />
+            android:textSize="12sp" />
 
 
     </RelativeLayout>
