--- a/app/src/main/res/layout/similar_movies_item_view.xml
+++ b/app/src/main/res/layout/similar_movies_item_view.xml
@@ -4,11 +4,11 @@
     android:id="@+id/similarMoviesCardView"
     android:layout_width="140dp"
     android:layout_height="300dp"
-    android:layout_marginLeft="16dp"
     android:layout_marginStart="16dp"
+    android:layout_marginLeft="16dp"
     android:layout_marginBottom="16dp"
-    app:cardPreventCornerOverlap="false"
-    app:cardCornerRadius="0dp">
+    app:cardCornerRadius="2dp"
+    app:cardPreventCornerOverlap="false">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -17,40 +17,42 @@
         <ImageView
             android:id="@+id/similarMoviesThumbnailImageView"
             android:layout_width="match_parent"
-            android:transitionName="posterImageTransition"
             android:layout_height="196dp"
-            android:scaleType="fitXY" />
+            android:scaleType="fitXY"
+            android:transitionName="posterImageTransition" />
 
         <TextView
             android:id="@+id/similarMoviesNameTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="left"
-            android:layout_marginTop="5dp"
-            android:textSize="15dp"
-            android:paddingLeft="5dp"
             android:layout_below="@+id/similarMoviesThumbnailImageView"
-            android:textColor="@android:color/black" />
+            android:layout_marginTop="5dp"
+            android:gravity="left"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:textColor="@android:color/black"/>
 
         <TextView
+            android:id="@+id/similarMoviesReleaseDateTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/similarMoviesReleaseDateTextView"
-            android:paddingLeft="5dp"
             android:layout_below="@id/similarMoviesNameTextView"
-            android:textSize="12dp"/>
+            android:layout_marginLeft="4dp"
+            android:textSize="12sp" />
 
         <TextView
+            android:id="@+id/similarmoviesRatingTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/similarmoviesRatingTextView"
-            android:paddingLeft="4dp"
             android:layout_alignParentBottom="true"
-            android:textColor="@android:color/black"
             android:layout_marginBottom="5dp"
-            android:textSize="14dp"
+            android:drawableRight="@drawable/ic_star"
             android:drawablePadding="3dp"
-            android:drawableRight="@drawable/ic_star"/>
+            android:paddingLeft="4dp"
+            android:textColor="@android:color/black"
+            android:textSize="12sp" />
 
 
     </RelativeLayout>
