--- a/app/src/main/res/layout/fragment_info_tvshow.xml
+++ b/app/src/main/res/layout/fragment_info_tvshow.xml
@@ -22,6 +22,7 @@
             android:id="@+id/aboutTvShowTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/proximanova_regular_webfont"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_below="@+id/aboutTheTvShowTextViewLabel"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
@@ -42,6 +43,7 @@
         <TextView
             android:id="@+id/firstAirDateTextView"
             android:layout_width="wrap_content"
+            android:fontFamily="@font/proximanova_regular_webfont"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/firstAirDateLabel"
             android:layout_marginLeft="5dp"
@@ -61,6 +63,7 @@
         <TextView
             android:id="@+id/lastAirDateTextView"
             android:layout_width="wrap_content"
+            android:fontFamily="@font/proximanova_regular_webfont"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/lastAirDateLabel"
             android:layout_marginLeft="5dp"
@@ -81,6 +84,7 @@
             android:id="@+id/createdByTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/proximanova_regular_webfont"
             android:layout_alignBaseline="@+id/createdByLabel"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="5dp"
@@ -100,6 +104,7 @@
         <TextView
             android:id="@+id/showTypeTextView"
             android:layout_width="wrap_content"
+            android:fontFamily="@font/proximanova_regular_webfont"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/showTypeLabel"
             android:layout_marginLeft="5dp"
@@ -121,6 +126,7 @@
             android:id="@+id/showStatusTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/proximanova_regular_webfont"
             android:layout_alignBaseline="@+id/showStatusLabel"
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@+id/showStatusLabel" />
@@ -148,6 +154,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/trailorsTvShowTextLabel"
             android:layout_marginTop="5dp"
+            android:fontFamily="@font/proximanova_regular_webfont"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:visibility="invisible"
             android:id="@+id/noTVTrailerTextView"/>
