--- a/app/src/main/res/layout/acitivity_main_second_tvshows.xml
+++ b/app/src/main/res/layout/acitivity_main_second_tvshows.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="@font/proximanova_semibold_webfont"
-        android:textColor="@android:color/black"
+        android:textColor="@color/text1"
         android:textSize="18sp" />
 
     <TextView
@@ -22,6 +22,7 @@
         android:layout_alignBaseline="@+id/tvShowTypeTextView"
         android:fontFamily="@font/proximanova_regular_webfont"
         android:layout_alignParentEnd="true"
+        android:textColor="@color/subtext1"
         android:layout_marginEnd="16dp"
         android:padding="8dp"/>
 
