--- a/app/src/main/res/layout/activity_about_movie.xml
+++ b/app/src/main/res/layout/activity_about_movie.xml
@@ -64,6 +64,7 @@
                     android:layout_marginTop="264dp"
                     android:layout_toRightOf="@+id/posterWithBannerImageView"
                     android:drawableLeft="@drawable/ic_dot_single"
+                    android:fontFamily="@font/proximanova_regular_webfont"
                     android:textColor="@android:color/white" />
 
                 <TextView
@@ -73,6 +74,7 @@
                     android:layout_alignBaseline="@+id/releaseDateTextView"
                     android:layout_toRightOf="@+id/releaseDateTextView"
                     android:drawableLeft="@drawable/ic_dot_single"
+                    android:fontFamily="@font/proximanova_regular_webfont"
                     android:textColor="@android:color/white" />
 
                 <TextView
@@ -83,6 +85,7 @@
                     android:layout_alignStart="@+id/releaseDateTextView"
                     android:layout_alignLeft="@+id/releaseDateTextView"
                     android:layout_marginTop="1dp"
+                    android:fontFamily="@font/proximanova_regular_webfont"
                     android:textColor="@android:color/white"
                     android:textSize="22dp"
                     android:textStyle="bold" />
@@ -95,6 +98,7 @@
                     android:layout_alignStart="@+id/nameTextView"
                     android:layout_alignLeft="@+id/nameTextView"
                     android:layout_marginTop="5dp"
+                    android:fontFamily="@font/proximanova_regular_webfont"
                     android:textColor="@android:color/white" />
 
                 <androidx.appcompat.widget.Toolbar
