--- a/app/src/main/res/layout/activity_main_second.xml
+++ b/app/src/main/res/layout/activity_main_second.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="@font/proximanova_semibold_webfont"
-        android:textColor="@android:color/black"
+        android:textColor="@color/text1"
         android:textSize="18sp" />
 
     <TextView
@@ -23,7 +23,8 @@
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/proximanova_regular_webfont"
-        android:padding="8dp" />
+        android:padding="8dp"
+        android:textColor="@color/subtext1" />
 
 
     <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
