--- a/app/src/main/res/layout/fragment_info_tvshow.xml
+++ b/app/src/main/res/layout/fragment_info_tvshow.xml
@@ -14,40 +14,43 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:fontFamily="@font/proximanova_regular_webfont"
             android:text="About the Show"
-            android:textSize="16sp"
-            android:textColor="@android:color/black" />
+            android:textColor="@color/text1"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/aboutTvShowTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/proximanova_regular_webfont"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_below="@+id/aboutTheTvShowTextViewLabel"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="5dp" />
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:fontFamily="@font/proximanova_regular_webfont"
+            android:textSize="16sp" />
 
 
         <TextView
             android:id="@+id/firstAirDateLabel"
             android:layout_width="wrap_content"
-            android:textSize="16sp"
             android:layout_height="wrap_content"
             android:layout_below="@id/aboutTvShowTextView"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginTop="15dp"
+            android:fontFamily="@font/proximanova_regular_webfont"
             android:text="First Air Date:"
-            android:textColor="@android:color/black" />
+            android:textColor="@color/text1"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/firstAirDateTextView"
             android:layout_width="wrap_content"
-            android:fontFamily="@font/proximanova_regular_webfont"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/firstAirDateLabel"
             android:layout_marginLeft="5dp"
-            android:layout_toRightOf="@+id/firstAirDateLabel" />
+            android:layout_toRightOf="@+id/firstAirDateLabel"
+            android:fontFamily="@font/proximanova_regular_webfont" />
 
         <TextView
             android:id="@+id/lastAirDateLabel"
@@ -55,40 +58,42 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/firstAirDateLabel"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:textSize="16sp"
             android:layout_marginTop="10dp"
+            android:fontFamily="@font/proximanova_regular_webfont"
             android:text="Last Air Date:"
-            android:textColor="@android:color/black" />
+            android:textColor="@color/text1"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/lastAirDateTextView"
             android:layout_width="wrap_content"
-            android:fontFamily="@font/proximanova_regular_webfont"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/lastAirDateLabel"
             android:layout_marginLeft="5dp"
-            android:layout_toRightOf="@+id/lastAirDateLabel" />
+            android:layout_toRightOf="@+id/lastAirDateLabel"
+            android:fontFamily="@font/proximanova_regular_webfont" />
 
         <TextView
             android:id="@+id/createdByLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
             android:layout_below="@+id/lastAirDateLabel"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginTop="10dp"
+            android:fontFamily="@font/proximanova_regular_webfont"
             android:text="Created By:"
-            android:textColor="@android:color/black" />
+            android:textColor="@color/text1"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/createdByTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/proximanova_regular_webfont"
             android:layout_alignBaseline="@+id/createdByLabel"
-            android:layout_marginBottom="5dp"
             android:layout_marginLeft="5dp"
-            android:layout_toRightOf="@+id/createdByLabel" />
+            android:layout_marginBottom="5dp"
+            android:layout_toRightOf="@+id/createdByLabel"
+            android:fontFamily="@font/proximanova_regular_webfont" />
 
         <TextView
             android:id="@+id/showTypeLabel"
@@ -97,50 +102,53 @@
             android:layout_below="@+id/createdByLabel"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginTop="10dp"
-            android:textSize="16sp"
+            android:fontFamily="@font/proximanova_regular_webfont"
             android:text="Show Type:"
-            android:textColor="@android:color/black" />
+            android:textColor="@color/text1"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/showTypeTextView"
             android:layout_width="wrap_content"
-            android:fontFamily="@font/proximanova_regular_webfont"
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/showTypeLabel"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="10dp"
-            android:layout_toRightOf="@+id/showTypeLabel" />
+            android:layout_toRightOf="@+id/showTypeLabel"
+            android:fontFamily="@font/proximanova_regular_webfont" />
 
         <TextView
             android:id="@+id/showStatusLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
             android:layout_below="@+id/showTypeLabel"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginTop="10dp"
+            android:fontFamily="@font/proximanova_regular_webfont"
             android:text="Show Status:"
-            android:textColor="@android:color/black" />
+            android:textColor="@color/text1"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/showStatusTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/proximanova_regular_webfont"
             android:layout_alignBaseline="@+id/showStatusLabel"
             android:layout_marginLeft="5dp"
-            android:layout_toRightOf="@+id/showStatusLabel" />
+            android:layout_toRightOf="@+id/showStatusLabel"
+            android:fontFamily="@font/proximanova_regular_webfont" />
 
         <TextView
             android:id="@+id/trailorsTvShowTextLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
             android:layout_below="@+id/showStatusLabel"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginTop="20dp"
+            android:fontFamily="@font/proximanova_regular_webfont"
             android:text="Trailors"
-            android:textColor="@android:color/black" />
+            android:textColor="@color/text1"
+            android:textSize="16sp" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/trailorsTvShowRecyclerView"
@@ -150,14 +158,14 @@
             android:layout_marginTop="10dp" />
 
         <TextView
+            android:id="@+id/noTVTrailerTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/trailorsTvShowTextLabel"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginTop="5dp"
             android:fontFamily="@font/proximanova_regular_webfont"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:visibility="invisible"
-            android:id="@+id/noTVTrailerTextView"/>
+            android:visibility="invisible" />
 
     </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
