--- a/app/src/main/res/layout/movie_cast_list_item_view.xml
+++ b/app/src/main/res/layout/movie_cast_list_item_view.xml
@@ -19,7 +19,8 @@
         android:layout_centerInParent="true"
         android:layout_marginLeft="5dp"
         android:layout_toRightOf="@id/movieCastIV"
-        android:textColor="@android:color/black" />
+        android:fontFamily="@font/proximanova_regular_webfont"
+        android:textColor="@color/text1" />
 
     <TextView
         android:id="@+id/castCharacterTV"
@@ -28,6 +29,8 @@
         android:layout_centerInParent="true"
         android:layout_marginLeft="25dp"
         android:layout_toRightOf="@+id/nameTV"
+        android:fontFamily="@font/proximanova_regular_webfont"
+        android:textColor="@color/subtext1"
         android:textStyle="italic" />
 
     <View
