--- a/app/src/main/res/layout/similar_movies_item_view.xml
+++ b/app/src/main/res/layout/similar_movies_item_view.xml
@@ -26,13 +26,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/similarMoviesThumbnailImageView"
-            android:layout_marginTop="5dp"
-            android:gravity="left"
             android:layout_marginLeft="4dp"
+            android:layout_marginTop="5dp"
             android:layout_marginRight="4dp"
-            android:maxLines="2"
             android:ellipsize="end"
-            android:textColor="@android:color/black"/>
+            android:fontFamily="@font/proximanova_regular_webfont"
+            android:gravity="left"
+            android:maxLines="2"
+            android:textColor="@color/text1" />
 
         <TextView
             android:id="@+id/similarMoviesReleaseDateTextView"
@@ -40,6 +41,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/similarMoviesNameTextView"
             android:layout_marginLeft="4dp"
+            android:fontFamily="@font/proximanova_regular_webfont"
+            android:textColor="@color/subtext1"
             android:textSize="12sp" />
 
         <TextView
@@ -50,8 +53,9 @@
             android:layout_marginBottom="5dp"
             android:drawableRight="@drawable/ic_star"
             android:drawablePadding="3dp"
+            android:fontFamily="@font/proximanova_regular_webfont"
             android:paddingLeft="4dp"
-            android:textColor="@android:color/black"
+            android:textColor="@color/text1"
             android:textSize="12sp" />
 
 
