--- a/app/src/main/res/layout/trailer_thumbnail_image_view.xml
+++ b/app/src/main/res/layout/trailer_thumbnail_image_view.xml
@@ -36,6 +36,7 @@
             android:id="@+id/trailerThumbnailName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/proximanova_regular_webfont"
             android:layout_below="@+id/trailerFrameLayout"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp"/>
